Fix content overlapping in appbar with other categories

--- a/core/weather/static/weather/styles.css
+++ b/core/weather/static/weather/styles.css
@@ -63,6 +63,7 @@
     margin-right: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+    border-radius: 5px;
 }
 
 .forecast-element:first-child{
